<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">awf</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_im_aty">ImAty</string>
    <string name="title_activity_im">ImActivity</string>
    <string name="image_view">ImageView</string>
    <string name="title_activity_image_view">ImageViewActivity</string>
    <string name="show">Show</string>
    <string name="title_activity_crash_aty">CrashAty</string>
    <string name="title_activity_fup">FUp</string>
    <string name="title_activity_img_list">ImgListActivity</string>
    <string name="title_activity_cache_aty">CacheAty</string>
    <string name="title_activity_dlm_aty">DlmAty</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>

</resources>
